# algoRWA

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml  run_backtest.py
outcomes/: debug_views_mag_seven00.json  debug_views_mag_seven3.json  debug_views_mag_seven4.json  debug_views_mag_seven5.json  debug_views_mag_seven6.json  debug_views_mag_seven7.json  oracle_output_mag_seven00.json  oracle_output_mag_seven3.json  oracle_output_mag_seven4.json  oracle_output_mag_seven5.json  oracle_output_mag_seven6.json  oracle_output_mag_seven7.json
outcomes/20260208_225250_mag_seven_ML_Production_Unconstrained/: oracle_payload.json  strategy_views.json
outcomes/20260208_225326_mag_seven_LLM_Production_Unconstrained/: oracle_payload.json  strategy_views.json
portfolios/: portfolios.JSON  views.JSON  views_backtest.JSON  views_bearish.JSON
src/rwaengine/analysis/: backtester.py  benchmark.py  plotter.py  strategies.py
src/rwaengine/core/: bl_math.py  engine.py
src/rwaengine/data/: base.py  schemas.py
src/rwaengine/data/adapters/: yfinance_adapter.py
src/rwaengine/execution/: risk_manager.py
src/rwaengine/oracle/: nav_reporter.py  schemas.py
src/rwaengine/strategy/: base.py  factory.py  types.py
src/rwaengine/strategy/generators/: json_loader.py  llm_agent.py  manual.py  ml_predictor.py
src/rwaengine/utils/: logger.py  portfolio_loader.py
tests/unit/: test_strategy.py  test_yfinance.py
