[project]
name = "algoRWA"
version = "0.1.0"
description = "Off-chain computation engine for Black-Litterman RWA fund"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",           # 数据处理核心
    "numpy>=1.26.0",           # 数值计算
    "yfinance>=0.2.36",        # 市场数据 (MVP阶段)
    "pydantic>=2.6.0",         # 数据验证严格模式
    "pydantic-settings>=2.2.0",# 配置管理
    "scipy>=1.12.0",           # 优化算法依赖
    "loguru>=0.7.2",           # 现代日志记录 (比 logging 更好用)
    "pyportfolioopt>=1.5.5",   # 投资组合优化基石
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",           # 单元测试
    "pytest-cov>=4.1.0",       # 覆盖率报告
    "black>=24.0.0",           # 代码格式化
    "mypy>=1.8.0",             # 静态类型检查
    "ruff>=0.2.0",             # 高性能 Linter (替代 pylint/flake8)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]